<resources>
    <string name="app_name">Robudget</string>
    <string name="title">Robudget</string>
    <string name="addTransactionButton">Add Transaction</string>
    <string name="viewTransactionButton">View Transaction</string>
    <string name="dataAnalyticsButton">Data Analytics</string>
    <string name="optionsButton">Options</string>
    <string name="menuButton">Menu</string>
    <string name="accountButton">Account</string>
    <string name="userDisplay">Hello</string>
    <string name="title_activity_login">Sign in</string>
    <string name="activity_registration">Account Registration</string>
    <string name="activity_login">Account Login</string>
    <string name="activity_home">Welcome</string>
    <!-- text labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_old_password">Old Password\:</string>
    <string name="label_new_password">New Password\:</string>
    <string name="label_password_confirm">Retype password:</string>
    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_options">Options</string>
    <string name="button_menu">Menu</string>
    <string name="button_account">Account</string>
    <string name="button_addTransaction">Add Transaction</string>
    <string name="button_viewTransaction">View Transaction</string>
    <string name="button_dataAnalytics">Data Analytics</string>
    <string name="button_account_change_password">Change account password</string>
    <string name="button_account_logout">Logout</string>
    <string name="button_account_clear_data">Clear all local data</string>
    <string name="button_account_card_details">View\/Edit Bank\/Card Details</string>
    <string name="button_account_deactivate">Deactivate account</string>
    <!-- texts -->
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>
    <string name="backButton">Back</string>
    <string name="AddButton">Add</string>
    <string name="transaction_value">Payment Amount</string>
    <string name="hint_description">Add a Description</string>
    <string name="descriptionText">Description</string>
    <string name="add_new_transaction">Add New Transaction</string>
    <string name="use_existing_transaction" >Use Existing Transaction</string>
    <string name="transaction_title" >Title</string>
    <string name="transaction_amount" >Amount</string>
    <string name="transaction_date" >Date</string>
    <string name="options_home_screen">Choose default home screen graph</string>
    <string name="options_notifications">Notifications</string>
    <string name="options_budget_checkbox">Set budget limit</string>
    <string name="account_bank_current">Your current bank is\:</string>
    <string name="account_card_current">Your registered card number is\:</string>
    <string name="account_card_new">Add new card\:</string>
    <string name="account_card_number">Card Number</string>

    <!-- string arrays -->
    <string-array name="category">
        <item>Food/Consumables</item>
        <item>Entertainment</item>
        <item>Bills</item>
        <item>Groceries</item>
        <item>Transportation</item>
        <item>Personal Purchases</item>
        <item>Other</item>
    </string-array>

    <string-array name="existing_transactions">
        <item></item>
        <item>Maccas</item>
        <item>Opal top up</item>
        <item>Groceries</item>
        <item>Rent</item>
        <item>Phone bill</item>
    </string-array>

    <string-array name="data_analytics">
        <item>See my spending over time</item>
        <item>See my spending by category</item>
        <item>Compare my spending with others</item>
        <item>See where I can improve my spending</item>
    </string-array>

    <string-array name="options_home_screen">
        <item>Past month\'s spending </item>
        <item>Past year\'s spending</item>
        <item>Compare my spending with others</item>
        <item>See where I can improve my spending</item>
    </string-array>

    <string-array name="options_notifications_settings">
        <item>Show mobile notifications</item>
        <item>Don\'t show notifications</item>
    </string-array>

    <string-array name="options_budget_limit">
        <item>per month</item>
        <item>per week</item>
        <item>every 3 months</item>
        <item>every 6 months</item>
        <item>every year</item>
    </string-array>

</resources>
