<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/addTransactionButton"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="sendMessage"
        android:text="@string/backButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="sendMessage"
        android:text="@string/AddButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/AddTransactionRadioGroup"
        android:layout_width="356dp"
        android:layout_height="428dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/AddTransactionRadio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.529"
        tools:layout_editor_absoluteY="68dp"
        tools:layout_editor_absoluteX="11dp">

        <RadioButton
            android:id="@+id/add_new_transaction_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add_new_transaction"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/AmountTextBox"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/transaction_value"
            android:ems="10"
            android:hint="@string/transaction_value"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="110dp" />

        <EditText
            android:id="@+id/DescriptionTextBox"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/descriptionText"
            android:ems="10"
            android:hint="@string/hint_description"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AmountTextBox" />

        <Spinner
            android:id="@+id/categoryChoices"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DescriptionTextBox" />

        <RadioButton
            android:id="@+id/use_existing_trans_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_existing_transaction"
            android:textSize="@dimen/text_size" />

        <Spinner
            android:id="@+id/existingTransactions"
            android:layout_width="match_parent"
            android:layout_height="36dp" />


    </RadioGroup>


</android.support.constraint.ConstraintLayout>